third_party/llvm-project/llvm/test/MC/RISCV/rv64zbf-invalid.s
# RUN: not llvm-mc -triple riscv64 -mattr=+experimental-b,experimental-zbf < %s 2>&1 | FileCheck %s

# Too few operands
bfpw t0, t1 # CHECK: :[[@LINE]]:1: error: too few operands for instruction
